--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "dotnet": "^1.1.4",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.6.5"
   }
 }
