--- a/package.json
+++ b/package.json
@@ -17,9 +17,17 @@
   },
   "homepage": "https://github.com/Bevest-Technology/bevest-cloudcomputing#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "dotnet": "^1.1.4",
     "express": "^4.18.2",
-    "mysql2": "^3.6.5"
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.6.5",
+    "sequelize": "^6.35.1",
+    "sqlite3": "^5.1.6"
   }
 }
